--- a/vignettes/ProteomicsAnnotationHubData.Rmd
+++ b/vignettes/ProteomicsAnnotationHubData.Rmd
@@ -44,7 +44,7 @@ and
 [Access the AnnotationHub Web Service](http://bioconductor.org/packages/devel/bioc/vignettes/AnnotationHub/inst/doc/AnnotationHub.html)
 vignettes for a description on how to use it.
 
-## Accessing proteomics data through `AnnotationHub`
+## Accessing proteomics data through `AnnotationHub` {-}
 
 ```{r}
 library("AnnotationHub")
@@ -90,6 +90,7 @@ plot(peaks(rw, 1), type = "h", xlab = "M/Z", ylab = "Intensity")
 # Available datasets
 
 ```{r}
+library("ProteomicsAnnotationHubData")
 availableProteomicsAnnotationHubData
 ```
 
