--- a/README.Rmd
+++ b/README.Rmd
@@ -1,9 +1,10 @@
 ---
-title: `AnnotationHub` for proteomics
 output:
   md_document:
     variant: markdown_github
 ---
+
+# `AnnotationHub` for proteomics
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
