don't print note in env code chunk

--- a/vignettes/ProteomicsAnnotationHubData.Rmd
+++ b/vignettes/ProteomicsAnnotationHubData.Rmd
@@ -16,7 +16,7 @@ vignette: >
 BiocStyle::markdown()
 ```
 
-```{r env, echo=FALSE}
+```{r env, echo=FALSE, message=FALSE}
 suppressPackageStartupMessages(library("AnnotationHub"))
 suppressPackageStartupMessages(library("ProteomicsAnnotationHubData"))
 suppressPackageStartupMessages(library("mzR"))
