--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
 CHANGES IN VERSION 0.99.0
 -------------------------
+ o Submission of Bioc (Issue 1292) <2015-08-25 Tue>
+CHANGES IN VERSION 0.99.0
+-------------------------
  o  First release with data PXD000001
