--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,15 @@
-CHANGES IN VERSION 0.99.4
+CHANGES IN VERSION 1.1.1
 -------------------------
  o Manually setting flInfo in .ftpfileinfo2 for files located on S3
    <2015-12-15 Tue>
+
+CHANGES IN VERSION 1.1.0
+-------------------------
+ o Bioc devel 3.3
+
+CHANGES IN VERSION 1.0.0
+-------------------------
+ o Bioc release 3.2
  
 CHANGES IN VERSION 0.99.3
 -------------------------
