--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,7 @@
 CHANGES IN VERSION 1.1.2
 ------------------------
  o Major rewrite of the data preparation, now relying on simple dcf
-   files <2015-12-17 Thu>
+   files as input and intermediate PAHD objects. <2015-12-17 Thu>
  
 CHANGES IN VERSION 1.1.1
 ------------------------
