update readme to use query

--- a/README.Rmd
+++ b/README.Rmd
@@ -26,7 +26,7 @@ ah
 We can extract the entries that originate from the PRIDE database:
 
 ```{r provider}
-ah[ah$dataprovider == "PRIDE"]
+query(ah, "PRIDE")
 ```
 
 Or those of a specific project
