--- a/README.Rmd
+++ b/README.Rmd
@@ -23,7 +23,8 @@ ah <- AnnotationHub()
 ah
 ```
 
-We can extract the entries that originate from the PRIDE database:
+Let's start by querying the entries that originate from the PRIDE
+database:
 
 ```{r provider}
 query(ah, "PRIDE")
